@@ -60,6 +60,8 @@
   {ml-pull}1135[#1135].)
 * Improve data frame analysis runtime by optimising memory alignment for intrinsic
   operations. (See {ml-pull}1142[#1142].)
+* Fix spurious anomalies for count and sum functions after no data are received for long
+  periods of time. (See {ml-pull}1158[#1158].)
 
 == {es} version 7.7.1
 
